This commit changes the mobile viewport height issue

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@
 html {
   overflow: scroll;
   overflow-x: hidden;
+  height: -webkit-fill-available;
 }
 
 ::-webkit-scrollbar {
@@ -27,6 +28,7 @@ body {
   font-size: 18px;
   box-sizing: border-box;
   background: var(--background-color);
+  height: -webkit-fill-available;
 }
 
 :root {
