--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,7 @@ body {
   --background-color: #0a0a0a;
   --font-color: #ffffff;
   --card-border-color: #ffffff38;
+  --card-mobile-border-color: #dfc4c46b;
   --card-link-bg-color: #ffffff28;
   --card-link-bg-color-hover: #e6e6e654;
   --card-link-bg-color-active: #37c6ff91;
